llm-model-generator is a new backend which uses new versions of libraries such as owlready2 and pyproject.toml file. Docker containers still don't work
